@@ -1,5 +1,5 @@
 /* Reverse Engineer's Hex Editor
- * Copyright (C) 2020 Daniel Collins <solemnwarning@solemnwarning.net>
+ * Copyright (C) 2020-2023 Daniel Collins <solemnwarning@solemnwarning.net>
  *
  * This program is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 as published by
@@ -36,6 +36,9 @@ namespace REHex {
 			Document &document;
 			
 			wxTextCtrl *data_input;
+			
+			wxRadioButton *overwrite_mode;
+			wxRadioButton *insert_mode;
 			
 			NumericTextCtrl *range_from;
 			
